demo-istio/demo-gateway-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: istio-demo
  name: demo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.istio.itenium-training.be"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: istio-demo
  name: demo-backend
spec:
  hosts:
    - "api.istio.itenium-training.be"
  gateways:
    - demo-gateway
  http:
    - route:
        - destination:
            host: demo-backend
            subset: v1-1
          weight: 70
        - destination:
            host: demo-backend
            subset: v1-2
          weight: 30
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: istio-demo
  name: demo-frontend
spec:
  hosts:
    - "app.istio.itenium-training.be"
  gateways:
    - demo-gateway
  http:
    - route:
        - destination:
            host: demo-frontend
